EPBDS-13495 Fix view deployments in deployment repo.